--- a/index.html
+++ b/index.html
@@ -27,12 +27,26 @@
 </head>
 
 <body>
+<div class="container-fluid">
   <div class="row">
-    <div class="chartjs">
-      <p>Below is a bar chart created using <a href="https://www.chartjs.org/">Chart.js</a> library</p>
-      <canvas id="myChart"></canvas>
+    <div class="header">
+      <h1>CALIFORNIA ON FIRE</h1>
+      <p>Use the below interactive dashboard to vie key fire statistics<br>for the state of California between 2013 and 2019 </p>
     </div>
   </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2" style="max-height: 400px;"> -->
+      <h4 style="text-align: center;">Top 10 fires<br>by duration</h4>
+      <canvas id="myChart"></canvas>
+    </div>
+    <div class="col-md-8 offset-md-2">
+      <p>Select year to review: <select id="selYear"></select></p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5492583.064425747!2d-121.04251005368528!3d36.92945194379992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2sCalifornia!5e0!3m2!1sen!2sus!4v1628974598669!5m2!1sen!2sus" width="200" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </div>
+</div>
   <!-- JavaScript file -->
   <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
